commiting MVP + stretch updated

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -80,3 +80,11 @@ body {
 a{
   text-decoration: none;
 }
+
+
+.active-link{
+  color: white;
+  background-color:grey;
+ 
+  border-radius: 8px;
+}
